--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -1,26 +1,24 @@
 
-<html class="noIE" lang="en-US">
-	<!--<![endif]-->
-
+<html class="noIE" lang="en-US" xmlns:th="http://www.themleaf.org">
 	<head>
 		<meta charset="UTF-8" />
 		<title>GFashion - Responsive e-commerce HTML Template</title>
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link rel="icon" href="img1/favicon/favicon.html" type="image/x-icon" />
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img1/favicon/apple-touch-icon-144x144-precomposed.html">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img1/favicon/apple-touch-icon-72x72-precomposed.html">
-		<link rel="apple-touch-icon-precomposed" href="img1/favicon/apple-touch-icon-precomposed.html">
-		<link rel="stylesheet" href="css1/minified.css">
+		<link rel="icon" href="img1/favicon/favicon.html" type="/image/x-icon" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img1/favicon/apple-touch-icon-144x144-precomposed.html">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img1/favicon/apple-touch-icon-72x72-precomposed.html">
+		<link rel="apple-touch-icon-precomposed" href="/img1/favicon/apple-touch-icon-precomposed.html">
+		<link rel="stylesheet" href="/css1/minified.css">
 		<script>
-			window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');
+			window.jQuery || document.write('<script src="/js1/jquery.min.js"><\/script>');
 		</script>
-		<script src="js1/modernizr.min.js"></script>
-		<link rel="stylesheet" href="css1/jquery.nouislider.css">
-		<link rel="stylesheet" href="css1/isotope.css">
-		<link rel="stylesheet" href="css1/innerpage.css">
-		<link rel="stylesheet" href="css1/responsive.css">
+		<script src="/js1/modernizr.min.js"></script>
+		<link rel="stylesheet" href="/css1/jquery.nouislider.css">
+		<link rel="stylesheet" href="/css1/isotope.css">
+		<link rel="stylesheet" href="/css1/innerpage.css">
+		<link rel="stylesheet" href="/css1/responsive.css">
 	</head>
 
 	<body class="products-view">
@@ -564,7 +562,7 @@
 			<!-- // WIDGET AREA -->
 
 		</footer>
-		<script src="js1/minified.js"></script>
+		<script src="/js1/minified.js"></script>
 		<script>
 			(function(i, s, o, g, r, a, m) {
 				i['GoogleAnalyticsObject'] = r;
@@ -581,9 +579,9 @@
 			ga('create', 'UA-27646173-3', 'themina.net');
 			ga('send', 'pageview');
 		</script>
-		<script src="js1/jquery.nouislider.js"></script>
-		<script src="js1/jquery.isotope.min.js"></script>
-		<script src="js1/products.js"></script>
+		<script src="/js1/jquery.nouislider.js"></script>
+		<script src="/js1/jquery.isotope.min.js"></script>
+		<script src="/js1/products.js"></script>
 	</body>
 
 </html>
