--- a/src/main/resources/templates/salary.html
+++ b/src/main/resources/templates/salary.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>个人薪资管理</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
+		<link rel="stylesheet" th:href="@{/https://fonts.googleapis.com/css?family=Roboto:400,700}" />
 		<!-- https://fonts.google.com/specimen/Roboto -->
-		<link rel="stylesheet" href="css/fontawesome.min.css" />
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}" />
 		<!-- https://fontawesome.com/ -->
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 		<!-- https://getbootstrap.com/ -->
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 		<style>
 			th {
 				text-align: center;
