--- a/src/main/resources/templates/JJ_set meal.html
+++ b/src/main/resources/templates/JJ_set meal.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Product Admin - Dashboard HTML Template</title>
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo-style.css">
-		<link rel="stylesheet" href="css/JJ_yuangong.css" />
+		<title>套餐与活动推荐</title>
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}">
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
+		<link rel="stylesheet" th:href="@{/css/JJ_yuangong.css}">
+		<style type="text/css">
+		a {
+		    color: white;
+		    text-decoration: none;
+		    background-color: transparent;
+		    -webkit-text-decoration-skip: objects;
+		}
+		</style>
 	</head>
 
 	<body id="reportsPage">
@@ -37,7 +45,7 @@
 										<td>￥650</td>
 									</tr>
 								</table>
-								<span>活动</span>
+								<!-- <span>活动</span>
 								<table class="table">
 									<thead>
 										<tr>
@@ -53,7 +61,7 @@
 											<td>￥499</td>
 										</tr>
 									</tbody>
-								</table>
+								</table> -->
 								<span>餐饮</span>
 								<table class="table">
 									<thead>
@@ -141,21 +149,26 @@
 									<th scope="col">套餐名称</th>
 									<th scope="col">内容</th>
 									<th scope="col">价格</th>
+									<th scope="col">库存</th>
 									<th scope="col">详情</th>
 									<th scope="col">操作</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
+								<tr th:each="item:${list}">
 									<td>
-										<b>去玩儿</b>
+										<b th:text="${item.mname}">去玩儿</b>
 									</td>
 									<td>
-										<b>蛋炒饭+青青草原大旅行</b>
+										<b th:text="${item.list[0].mname}"></b>+<b th:text="${item.list[1].mname}"></b>
 									</td>
-									<td><b>￥430</b></td>
+									<td>￥<b th:text="${item.price}"></b></td>
+									<td>
+									<b th:text="${item.stock}" th:if="${item.stock!=0}"></b>
+									<b th:text="已售完" th:if="${item.stock==0}" style="color: red"></b>
+									</td>
 									<td><b>
-	                                    	<a href="#" data-target="#JJ_tan" data-toggle="modal" class="tm-product-delete-link JJ_xiang">
+	                                    	<a href="#" data-target="#JJ_tan" th:value="${item.id}" data-toggle="modal" class="tm-product-delete-link JJ_tc JJ_xiang">
 	                                    		<i class="fa fa-info"></i>
 	                                    	</a>
                                     </b></td>
@@ -172,14 +185,13 @@
 				</div>
 			</div>
 		</div>
-		</div>
-		<script src="js/jquery-3.3.1.min.js"></script>
+		<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 		<!-- https://jquery.com/download/ -->
-		<script src="js/moment.min.js"></script>
+		<script th:src="@{/js/moment.min.js}"></script>
 		<!-- https://momentjs.com/ -->
-		<script src="js/Chart.min.js"></script>
+		<script th:src="@{/js/Chart.min.js}"></script>
 		<!-- http://www.chartjs.org/docs/latest/ -->
-		<script src="js/bootstrap.min.js"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
 		<!-- https://getbootstrap.com/ -->
 		<script>
 			$(function() {
@@ -249,6 +261,11 @@
 							"</tr>");
 						$(".tas").append(tr4);
 					}
+				})
+				
+				
+				$(".JJ_tc").click(function(){
+					
 				})
 			})
 		</script>
