--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>主页管理</title>
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}">
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 	</head>
 	<body id="reportsPage">
 		<div class="" id="home">
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<p class="text-white mt-5 mb-5">Welcome back, <b>Admin</b></p>
+						<p class="text-white mt-5 mb-5">Welcome back, <b th:text="${session.staff.user.uname}" th:if="${session.staff!=null}"></b></p>
 					</div>
 				</div>
 				<!-- row -->
@@ -275,10 +275,10 @@
 			</div>
 			
 		</div>
-		<script src="js/jquery-3.3.1.min.js"></script>
-		<script src="js/moment.min.js"></script>
-		<script src="js/Chart.min.js"></script>
-		<script src="js/tooplate-scripts-cy.js"></script>
+		<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+		<script th:src="@{/js/moment.min.js}"></script>
+		<script th:src="@{/js/Chart.min.js}"></script>
+		<script th:src="@{/js/tooplate-scripts-cy.js}"></script>
 		<script>
 			Chart.defaults.global.defaultFontColor = 'white';
 			var newlinetitle = "项目流量统计"
