--- a/src/main/resources/templates/mode.html
+++ b/src/main/resources/templates/mode.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.themleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>主页管理</title>
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="/css/fontawesome.min.css">
+		<link rel="stylesheet" th:href="/css/bootstrap.min.css">
+		<link rel="stylesheet" th:href="/css/templatemo-style.css">
 	</head>
 	<body id="reportsPage">
 		<div class="" id="home">
@@ -129,11 +129,11 @@
 				</div>
 			</footer>
 		</div>
-		<script src="js/jquery-3.3.1.min.js"></script>
-		<script src="js/moment.min.js"></script>
-		<script src="js/Chart.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/tooplate-scripts-cy.js"></script>
+		<script th:src="/js/jquery-3.3.1.min.js"></script>
+		<script th:src="/js/moment.min.js"></script>
+		<script th:src="/js/Chart.min.js"></script>
+		<script th:src="/js/bootstrap.min.js"></script>
+		<script th:src="/js/tooplate-scripts-cy.js"></script>
 		<script>
 		  // 计算页面的实际高度，iframe自适应会用到
 		  function calcPageHeight(doc) {
