--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -139,9 +139,9 @@
 											<div class="tm-status-circle moving">
 											</div>
 										</td>
-										<td><b th:text="${item.ordertime}"></b></td>
+										<td><b th:text="${#dates.format(item.ordertime, 'yyyy-MM-dd HH-mm-ss')}"></b></td>
 										<td><b th:text="${item.user.uname}"></b></td>
-										<td><!-- <b th:text="${item.staff.user.uname}"></b> --></td>
+										<td><b th:text="${item.staff.user.uname}"></b></td>
 										<td>
 											<input type="hidden" th:value="${item.id}">
 											<a  data-target="#orderInfo" data-toggle="modal" style="color: white;" class="fa fa-info tm-product-delete-link info"></a>
@@ -474,24 +474,139 @@
 		<script th:src="@{/js/bootstrap.min.js}"></script>
     	<script th:src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
     	<script th:src="@{/js/vue.js}"></script>
-		<script type="text/javascript" >
+		<script th:line="javascript" >
 			$(".info").click(function(){
 				var id=$(this).prev().val();
 				$.post("queryById?id="+id+"",function(data){
-						console.log(data);
-						var div1=$("<div class='dingfanhead'></div>");
+						$(".box").text("");
+						var div1=$("<div class='dingdanhead'></div>");
 						var h41=$("<h4></h4>");
+						var timestamp= new Date(data.ordertime);
+						timestamp=timestamp.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp.toTimeString().substr(0, 8); 
 						var a1=$("<a data-toggle='collase'  href='#checkout-collapse4'><span class='step'>1</span><span>订单:<span><span class='dingdanhao'>"+data.orderno+"</span></a>");	
-						var span1=$("<span class='time'>订单时间:</span><span>"+data.ordertime+"</span>");
+						var span1=$("<span class='time'>订单时间:</span><span>"+timestamp+"</span>");
     					var span2=$("<span class='status'>订单状态：</span><span>"+data.name1+"</span>");
-    					var span3=$("<span class='sum'>订单总价:</span><span>"+data.price+"</span>");
     					var span4=$("<span class='team'>"+data.name2+"</span>");
-    					$(h41).append(a1).append(span1).append(span2).append(span3).append(span4);
-    					$(div1).append(h41);
+						var price=0;
 						if(data.name2=="个人"){
-							
+								var div=$("<div class='content col-md-12 collapsed' id='checkout-collapse4'></div>");
+								var divh;
+								var divh1;
+								var div2;
+								var div3;
+								var div4;
+								$.each(data.user.orders,function(index1,item1){
+										$.each(item1.list,function(index2,item2){
+											if(item2.typeid==1||item2.typeid==5){
+												var divh2=$("<div class='content col-md-11'></div>");
+												var divhtable=$("<table class='table'><thead>"
+												+"<th scope='col'>项目名称</th>"
+												+"<th scope='col'>项目地点</th>"
+												+"<th scope='col'>项目时间</th>"
+												+"<th scope='col'>项目价格</th>"
+												+"<th scope='col'>项目负责人</th>"
+												+"<th scope='col'>项目状态</th></thead></table>");
+												var divtbody=$("<tbody></tbody>");
+												if(item2.typeid==1){
+													var fzr;
+													$.each(item2.ix.list[0].list,function(indexs,is){
+														if(is.staff.postionid==1){
+															fzr=is.staff.user.uname;
+														}
+													})
+													var timestamp4= new Date(item2.ix.list[0].starttime);
+													timestamp4=timestamp4.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp4.toTimeString().substr(0, 8); 
+													var timestamp5= new Date(item2.ix.list[0].endtime);
+													timestamp5=timestamp5.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp5.toTimeString().substr(0, 8); 
+													price+=item2.ix.list[0].project.price;
+													var divtr=$("<tr>"
+															+"<th scope='row'><img src='[[@{/img/product-image.jpg}]]' width='50' height='50' alt='图片'/><b>"+item2.ix.list[0].project.pname+"</b></th>"
+															+"<td><b>"+item2.ix.list[0].area.area.aname+"</b></td>"
+															+"<td><b>"+timestamp4+"-"+timestamp5+"</b></td>"
+															+"<td><b>"+item2.ix.list[0].project.price+"</b></td>"
+															+"<td>"+fzr+"</td>"
+															+"<td>进行中</td></tr>");
+													$(divtbody).append(divtr);
+												}else{
+													$.each(item2.ix.list,function(index3,item3){
+														var fzr;
+														$.each(item3.list,function(indexs,is){
+															if(is.staff.postionid==1){
+																fzr=is.staff.user.uname;
+															}
+														})
+														var timestamp4= new Date(item3.starttime);
+														timestamp4=timestamp4.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp4.toTimeString().substr(0, 8); 
+														var timestamp5= new Date(item3.endtime);
+														timestamp5=timestamp5.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp5.toTimeString().substr(0, 8); 
+														price+=item3.project.price;
+														var divtr=$("<tr>"
+																+"<th scope='row'><img src='[[@{/img/product-image.jpg}]]' width='50' height='50' alt='图片'/><b>"+item3.project.pname+"</b></th>"
+																+"<td><b>"+item3.area.area.aname+"</b></td>"
+																+"<td><b>"+timestamp4+"至"+timestamp5+"</b></td>"
+																+"<td><b>"+item3.project.price+"</b></td>"
+																+"<td>"+fzr+"</td>"
+																+"<td>进行中</td></tr>");
+														$(divtbody).append(divtr);
+													})
+												}
+												$(divhtable).append(divtbody);
+												$(divh2).append(divhtable);
+												div2=divh2;
+											}
+											if(item2.typeid==2){
+												var divs=$("<div class='content col-md-11'></div>")
+													var divtable=$("<table class='table'>"
+													    +"<thead>"
+														+"<th scope='col'>菜品名称</th>"
+														+"<th scope='col'>菜品价格</th>"
+														+"<th scope='col'>菜品数据</th>"
+														+"<th scope='col'>菜品总价</th>"
+														+"</thead>");
+													var divbody=$("<tbody></tbody>");
+													$.each(item1.list,function(item2,index2){
+														var tr=$("<tr>"
+														+"<th scope='row'><img src='img/product-image.jpg' width='50' height='50' alt='图片' /><b>{{item2.ix.mname}}</b></th>"
+														+"<td><b>{{item2.price}}</b></td>"
+														+"<td><b>{{item2.name2}}</b></td>"
+														+"<td><b>￥{{item2.name2*item2.price}}</b></td>"
+														+"</tr>");
+														$(divbody).append(tr);
+													})
+													$(divtable).append(divbody);
+													$(divs).append(divtable);
+													div3=divs;
+											}
+											if(item2.typeid==3){
+												var div=$("<div class='content col-md-11'></div>");
+												var table=$("<table class='table'><thead><th scope='col'>房间名称</th><th scope='col'>房间价格</th><th scope='col'>房间类型</th><th scope='col'>房间状态</th></thead></table>");
+												var tbody=$("<tbody></tbody>");
+												$.each(item1.list,function(item2,index){
+													var tr=$("<tr>"
+													+"<th scope='row'><img src='img/product-image.jpg' width='50' height='50' alt='图片' /><b>{{item2.ix.mname}}</b></th>"
+													+"<td><b>{{item2.price}}</b></td>"
+													+"<td><b>{{item2.name2}}</b></td>"
+													+"<td><b>￥{{item2.name2*item2.price}}</b></td>"
+													+"</tr>");
+													$(tbody).append(tr);
+												})
+												$(table).append(tbody);
+												$(div).append(table);
+												div4=div;
+											}
+										})
+									})
+									divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapses5'><span class='step'>01</span><span>个人订单</span></a></h4></div>");
+									divh1=$("<div class='content col-md-12 collapsed' id='checkout-collapses5'></div>");
+								
+									$(divh1).append(div2).append(div3).append(div4);
+									$(div).append(divh).append(divh1);
+			    					var span3=$("<span class='sum'>订单总价:</span><span>"+price+"</span>");
+									$(h41).append(a1).append(span1).append(span2).append(span3).append(span4);
+			    					$(div1).append(h41);
+									$(".box").append(div1).append(div);
 						}else{
-							var div=$("<div class='content col-md-12 collapsed' id='checkout-collapse4'><div>");
+							var div=$("<div class='content col-md-12 collapsed' id='checkout-collapse4'></div>");
 							var divh;
 							var divh1;
 							$.each(data.list,function(index,item){
@@ -513,30 +628,40 @@
 											if(item2.typeid==1){
 												var fzr;
 												$.each(item2.ix.list[0].list,function(indexs,is){
-													if(is.productstaffid==5){
+													if(is.staff.postionid==1){
 														fzr=is.staff.user.uname;
 													}
 												})
+												price+=item2.ix.project.price;
+												var timestamp4= new Date(item2.ix.list[0].starttime);
+												timestamp4=timestamp4.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp4.toTimeString().substr(0, 8); 
+												var timestamp5= new Date(item2.ix.list[0].endtime);
+												timestamp5=timestamp5.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp5.toTimeString().substr(0, 8); 
 												var divtr=$("<tr>"
-														+"<th scope='row'><img src='img/product-image.jpg' width='50' height='50' alt='图片'/><b>"+item2.ix.project.pname+"</b></th>"
-														+"<td><b>"+item2.ix.area.area.aname+"</b><td>"
-														+"<td><b>"+item2.ix.starttime+"-"+item2.ix.endtime+"</b></td>"
-														+"<td><b>"+item2.ix.project.price+"</b></td>"
+														+"<th scope='row'><img src='[[@{/img/product-image.jpg}]]' width='50' height='50' alt='图片'/><b>"+item2.ix.project.pname+"</b></th>"
+														+"<td><b>"+item2.ix.list[0].area.area.aname+"</b></td>"
+														+"<td><b>"+timestamp4+"-"+timestamp5+"</b></td>"
+														+"<td><b>"+item2.ix.list[0].project.price+"</b></td>"
 														+"<td>"+fzr+"</td>"
 														+"<td>进行中</td></tr>");
 												$(divtbody).append(divtr);
 											}else{
-												$.each(item2.list,function(index3,item3){
+												$.each(item2.ix.list,function(index3,item3){
 													var fzr;
 													$.each(item3.list,function(indexs,is){
-														if(is.productstaffid==5){
+														if(is.staff.postionid==1){
 															fzr=is.staff.user.uname;
 														}
 													})
+													var timestamp4= new Date(item3.starttime);
+													timestamp4=timestamp4.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp4.toTimeString().substr(0, 8); 
+													var timestamp5= new Date(item3.endtime);
+													timestamp5=timestamp5.toLocaleDateString().replace(/\//g, "-")+ " " + timestamp5.toTimeString().substr(0, 8); 
+													price+=item3.project.price;
 													var divtr=$("<tr>"
-															+"<th scope='row'><img src='img/product-image.jpg' width='50' height='50' alt='图片'/><b>"+item3.project.pname+"</b></th>"
-															+"<td><b>"+item3.area.area.aname+"</b><td>"
-															+"<td><b>"+item3.starttime+"-"+item3.endtime+"</b></td>"
+															+"<th scope='row'><img src='[[@{/img/product-image.jpg}]]' width='50' height='50' alt='图片'/><b>"+item3.project.pname+"</b></th>"
+															+"<td><b>"+item3.area.area.aname+"</b></td>"
+															+"<td><b>"+timestamp4+"至"+timestamp5+"</b></td>"
 															+"<td><b>"+item3.project.price+"</b></td>"
 															+"<td>"+fzr+"</td>"
 															+"<td>进行中</td></tr>");
@@ -592,12 +717,18 @@
 							if(item.id==data.user.id){
 								divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapse0'><span class='step'>01</span><span>负责人订单</span></a></h4></div>");
 								divh1=$("<div class='content col-md-12 collapsed' id='checkout-collapse0'></div>");
+								$(divh1).append(div2).append(div3).append(div4);
 								$(div).append(divh).append(divh1);
 							}else{
 								divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapses"+index+"'><span class='step'>01</span><span>队员名称</span></a></h4></div>");
 								divh1=$("<div class='content col-md-12 collapsed' id='checkout-collapses"+index+"'></div>");
+								$(divh1).append(div2).append(div3).append(div4);
 								$(div).append(divh).append(divh1);
 							}
+								var span3=$("<span class='sum'>订单总价:</span><span>"+price+"</span>");
+								$(h41).append(a1).append(span1).append(span2).append(span3).append(span4);
+		    					$(div1).append(h41);
+								$(".box").append(div1);
 								$(".box").append(div);
 							})
 						}
