任宇轩第二次

--- a/src/main/resources/templates/GoodContactUpdate.html
+++ b/src/main/resources/templates/GoodContactUpdate.html
@@ -47,6 +47,19 @@
                     />
                   </div>
                   
+                  
+                  <div class="form-group mb-3">
+					<label for="description">商品介绍</label
+                    >
+                    <textarea
+                      class="form-control validate"
+                      rows="3"
+                      required
+                      name="name1"
+                      th:text="${item.name1}"
+                    ></textarea>
+                  </div>
+                  
                  <div class="form-group mb-3">
                     <label
                       for=""
