--- a/src/main/resources/templates/GoodContactAdd.html
+++ b/src/main/resources/templates/GoodContactAdd.html
@@ -43,6 +43,18 @@
                     />
                   </div>
                   
+                  <div class="form-group mb-3">
+					<label for="description">商品介绍</label
+                    >
+                    <textarea
+                      class="form-control validate"
+                      rows="3"
+                      required
+                      name="name1"
+                    ></textarea>
+                  </div>
+                  
+                  
                  <div class="form-group mb-3">
                     <label
                       for=""
