--- a/src/main/resources/static/css/JJ_yuangong.css
+++ b/src/main/resources/static/css/JJ_yuangong.css
@@ -147,3 +147,9 @@ select {
 	border: none;
 	color: white;
 }
+.JJ_taocan{
+	border-radius: 10px;
+	background-color: #435c70;
+	border: none;
+	color: white;
+}
