--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>登录</title>
-    <link rel="stylesheet" th:href="@{/https://fonts.googleapis.com/css?family=Roboto:400,700}"/>
+    <!-- <link rel="stylesheet" th:href="@{/https://fonts.googleapis.com/css?family=Roboto:400,700}"/> -->
     <link rel="stylesheet" th:href="@{/css/fontawesome.min.css}" />
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/css/templatemo-style.css}">    
@@ -67,5 +67,28 @@
 
     <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
+    <!-- <script type="text/javascript">
+    	$(function(){
+    		$("[type='submit']").click(function(){
+    			var uname=$("[name=uname]").val();
+    			var upassword=$("[name=upassword]").val();
+    			$.ajax({
+    				url : "/login/loginQuery",
+    				data:{
+    					uname:uname,
+    					upassword:upassword
+    				},
+					type : "POST",
+					dataType : "json",
+					contentType : "application/json;charset=utf-8",
+					success:function(data){
+						if(uname!=data.uname&&upassword!=data.upassword){
+							alert(data);
+						}
+					}
+    			})
+    		})
+    	})
+    </script> -->
   </body>
 </html>
