--- a/src/main/resources/templates/mode.html
+++ b/src/main/resources/templates/mode.html
@@ -48,15 +48,16 @@
                                	</span>
 								</a>
 								<div class="dropdown-menu" aria-labelledby="hd_xl">
-									<a class="dropdown-item" href="products.html" target="main">活动管理</a>
-									<a class="dropdown-item" href="project.html" target="main">项目管理</a>
-									<a class="dropdown-item" href="base.html" target="main">基地管理</a>
+									<a class="dropdown-item" th:href="@{/xjb_productController/query}" target="main">活动管理</a>
+									<a class="dropdown-item" th:href="@{/xjb_projectController/query}" target="main">项目管理</a>
+									<a class="dropdown-item" th:href="@{/xjb_areasController/query}" target="main">基地管理</a>
 									<a class="dropdown-item" href="Data-statistics.html" target="main">数据统计</a>
 									<a class="dropdown-item" href="project_tj.html" target="main">项目推荐</a>
+									<a class="dropdown-item" th:href="@{/menu/menuQuery}" target="main">套餐与活动推荐</a>
 								</div>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="customer.html" target="main">
+								<a class="nav-link" th:href="@{/customer/toCustomer}" target="main">
 									<i class="far fa-user"></i> 客户管理
 								</a>
 							</li>
@@ -73,8 +74,8 @@
                                 </span>
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="JJ_customer.html" target="main">员工列表</a>
-									<a class="dropdown-item" href="JJ_salary.html" target="main">薪资列表</a>
+									<a class="dropdown-item" th:href="@{/staff/query}" target="main">员工列表</a>
+									<a class="dropdown-item" th:href="@{/salary/salaryQuery}" target="main">薪资列表</a>
 								</div>
 							</li>
 							<li class="nav-item dropdown">
@@ -85,11 +86,11 @@
                                 </span>
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="GoodManager.html" target="main">餐饮管理</a>
-									<a class="dropdown-item" href="HotelManager.html" target="main">住宿管理</a>
-									<a class="dropdown-item" href="hotelOrder.html" target="main">住宿订单</a>
-									<a class="dropdown-item" href="GoodOrderAdd.html" target="main">餐饮订单</a>
-									<a class="dropdown-item" href="GoodContact.html" target="main">餐饮套餐管理</a>
+									<a class="dropdown-item" th:href="@{/menu/toquerymenu}" target="main">餐饮管理</a>
+									<a class="dropdown-item" th:href="@{/room/toqueryroom}" target="main">住宿管理</a>
+									<a class="dropdown-item" th:href="@{/room/roomorder}" target="main">住宿订单</a>
+									<a class="dropdown-item" th:href="@{/menu/tomenuorder}" target="main">餐饮订单</a>
+									<a class="dropdown-item" th:href="@{/bing/toQuerybind}" target="main">餐饮套餐管理</a>
 									
 								</div>
 							</li>
